--- a/r-references.bib
+++ b/r-references.bib
@@ -13,3 +13,10 @@
   note = {R package version 0.1.0.9997},
   url = {https://github.com/crsh/papaja},
 }
+@Manual{R-pwr,
+  title = {pwr: Basic Functions for Power Analysis},
+  author = {Stephane Champely},
+  year = {2020},
+  note = {R package version 1.3-0},
+  url = {https://CRAN.R-project.org/package=pwr},
+}
